Build and run Midonet with Java 11
Migrate Midonet to Java 11.
The project should be built with JDK 11 and Midonet runtime now
requires Java 11.
The template env scripts now configure Shenandoah GC

Updated gradle to 6.8.3 and updated gradle plugins.
Adapted build configuration to be in line with the new gradle.

Include jaxb runtime explicitly in dependencies because it's not part
of the standard openjdk releases anymore.

Updated some dependencies to their latest patch release (not upgrading
to a higher major release though): akka, jetty, jsch, netty,
zookeeper. Use latest scala 2.11 (2.11.12).

Use maven repo https URLs instead of http.

Fix compilation of scala code and fix some deprications in scala and
java code.

Let MutableUUID behave like java UUID: trailing dashes in a UUID
string are not accepted anymore. Adapt MutableUUID to be in line.